[package]
name = "chesslucent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Chess library for move validation and board representation
shakmaty = "0.25"
# PGN parsing
pgn-reader = "0.25"
# UCI engine communication
vampirc-uci = "0.11"
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
# Colored terminal output
colored = "2.1"
